--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.18",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -19,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-three-fiber": "^6.0.13",
     "react-three-gui": "^0.4.2",
+    "tailwind-merge": "^2.2.2",
     "tailwind-scrollbar": "^3.1.0",
     "three": "^0.162.0",
     "typewriter-effect": "^2.21.0",
